# umbra-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  config.h.in  main.cpp
src/adapters/: Adapters.h  CMakeLists.txt  STLAdapter.cpp  STLAdapter.h
src/core/: CMakeLists.txt  Core.h  Matrix.cpp  Matrix.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
src/core/debug/: CMakeLists.txt  Logger.cpp  Logger.h
src/core/math/: CMakeLists.txt  Matrix.cpp  Matrix.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  Ray2.cpp  Ray2.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/core/memory/: Allocator.h  CMakeLists.txt  FreeListAllocator.cpp  FreeListAllocator.h  LinearAllocator.cpp  LinearAllocator.h  Memory.h  MemoryArena.cpp  MemoryArena.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h
src/data-structures/: CMakeLists.txt  MpscQueue.cpp  MpscQueue.h
tests/: Vector2Tests.cpp
